--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <title>Document</title>
 </head>
 <body>
-  <button>New Grid</button>
-  <div class="container">
-
-  </div>
   
 </body>
 </html>
